2003-05-05  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* POTFILES.in: Added missing files.

2003-04-30  Quique  <quique@sindominio.net>

	es.po: Added Spanish translation

2002-11-29  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* ru.po: Added Russian translation
	* from Russian team <gnome-cyr@gnome.org>.
	* POTFILES.in: Added missing file.

2002-11-25  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* ru.po: Added Russian translation
	* from Russian team <gnome-cyr@gnome.org>.
	* POTFILES.in: Added missing files.