@@ -1,8 +1,16 @@
 data/conglomerate.desktop.in
+src/auth_off.c
+src/auth_on.c
+src/cong-debug-log-view.c
 src/cong-dialog.c
 src/cong-dispspec-registry.c
 src/cong-dispspec.c
+src/cong-document.c
 src/cong-dom-view.c
+src/cong-dummy-element-editor.c
+src/cong-editor-widget.c
+src/cong-eel.c
+src/cong-element-editor.c
 src/cong-error-dialog.c
 src/cong-error-file-open.c
 src/cong-error-file-save.c
@@ -13,18 +21,50 @@ src/cong-file-new.c
 src/cong-file-open.c
 src/cong-file-print.c
 src/cong-file-save.c
+src/cong-font.c
+src/cong-graph.c
 src/cong-location.c
 src/cong-menus.c
+src/cong-node-properties-dialog.c
+src/cong-parser-error.c
 src/cong-plugin.c
 src/cong-primary-window.c
+src/cong-progress-checklist.c
 src/cong-section-head-editor.c
+src/cong-source-view.c
+src/cong-span-text-editor.c
 src/cong-tree-view.c
+src/cong-view.c
+src/cursor.c
+src/file.c
+src/fo-parser-result.c
+src/fo-print-context.c
+src/fo-rect.c
+src/fo-solver-result.c
+src/fo-tests.c
+src/icon_assemble.c
+src/icon_connect.c
+src/icon_new.c
+src/icon_openfile.c
+src/icon_submit.c
+src/ilogo.c
 src/main.c
+src/plugin-convert-case.c
 src/plugin-docbook.c
+src/plugin-empty.c
 src/plugin-lists.c
+src/plugin-sgml.c
 src/plugin-tests.c
+src/plugin-validate.c
+src/plugin-website.c
 src/plugin-xsl.c
 src/popup.c
+src/position.c
+src/select.c
+src/tchoice.c
+src/tests.c
 src/tree.c
 src/xmldata.c
 src/xmledit.c
+src/xmlload.c
+src/xmlview.c
