@@ -1,3 +1,9 @@
+2003-07-03  Geert Stappers  <Geert.Stappers@xs4all.nl>
+
+	* POTFILES.in: Added all ../src/*.c files.
+
+	* all .po files are effected by that addmission.
+
 2003-05-05  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* POTFILES.in: Added missing files.
